fix: horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.loli.net/css2?family=Noto+Serif+SC:wght@300;400;500;600;700;800&family=Open+Sans:wght@400;500;600;700&display=swap');
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .font-regular{
     font-family: 'Noto Serif SC', serif;
     font-weight: 300;
